# halos

./: .fuse_hidden0012327800016a9b  .fuse_hidden00126a8000016a9e  .fuse_hidden0014cac100016b19  .fuse_hidden0018842100016b02  .gitignore  ACCESSIBILITY_AUDIT.md  BATCH_API_IMPLEMENTATION.md  FEATURE_149_IMPLEMENTATION_SUMMARY.md  FEATURE_157_BATCH_OPERATIONS.md  FEATURE_157_IMPLEMENTATION_SUMMARY.md  FRESH_CONTEXT_SESSION_SUMMARY.md  IMPLEMENTATION_PLAN.md  MEMORY_SYSTEM_SUMMARY.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  README_SESSION.md  SESSION_157_COMPLETE.md  SESSION_29_SUMMARY.md  SESSION_30_SUMMARY.md  SESSION_31_SUMMARY.md  SESSION_32_SUMMARY.md  SESSION_33_FINAL.md  SESSION_33_SUMMARY.md  SESSION_34_SUMMARY.md  SESSION_35_PROGRESS.txt  SESSION_35_SUMMARY.md  SESSION_3_SUMMARY.md  SESSION_48_FINAL.md  SESSION_51_COLOR_BLIND_MODES.md  SESSION_52_OFFLINE_MODE.md  SESSION_52_SESSION_TIMEOUT.md  SESSION_53_CONTENT_FILTERING.md  SESSION_53_SESSION_TIMEOUT_ENHANCEMENT.md  SESSION_54_CONTENT_FILTERING.md  SESSION_56_JSON_CSV_VIEWERS.md  SESSION_58_CODE_EXECUTION.md  SESSION_58_CODE_EXECUTION_VERIFICATION.md  SESSION_58_FINAL_REPORT.txt  SESSION_58_SUMMARY.md  (+91 more)
.qa-cache/: lint.json  typecheck.json
.venv2/: pyvenv.cfg
client/: index.html  package.json  pnpm-lock.yaml  server.py  server5174.py  server5175.py  simple_server.py  test_backend_quick.py  tsconfig.json  vite.config.ts
docs/: subagent_implementation.md
qa-reports/: feature-0-2025-12-28-00-15-04.json  feature-1-2025-12-28-00-15-04.json  feature-10-2025-12-28-00-15-04.json  feature-100-2025-12-28-00-15-11.json  feature-101-2025-12-28-00-15-11.json  feature-102-2025-12-28-00-15-11.json  feature-103-2025-12-28-00-15-11.json  feature-104-2025-12-28-00-15-11.json  feature-105-2025-12-28-00-15-11.json  feature-106-2025-12-28-00-15-11.json  feature-107-2025-12-28-00-15-11.json  feature-108-2025-12-28-00-15-11.json  feature-109-2025-12-28-00-15-11.json  feature-11-2025-12-28-00-15-04.json  feature-110-2025-12-28-00-15-11.json  feature-111-2025-12-28-00-15-12.json  feature-112-2025-12-28-00-15-12.json  feature-113-2025-12-28-00-15-12.json  feature-114-2025-12-28-00-15-12.json  feature-115-2025-12-28-00-15-12.json  feature-12-2025-12-28-00-15-04.json  (+180 more)
(+325 files in other folders)
